fix: update styles, icons, and extension description
- Update popup and notification styles
- Refresh icons with new design
- Update badge text color from white to black
- Optimize extension description for SEO and clarity
- Update related tests

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the extension"
   },
   "extensionDescription": {
-    "message": "Keep lists, bold, links and formatting when pasting into Slack from Notion and Google Docs",
+    "message": "Paste into Slack without losing formatting — supports Notion and Google Docs",
     "description": "The description of the extension"
   },
   "notificationFormattedForSlack": {
